--- a/install
+++ b/install
@@ -50,4 +50,7 @@ python3.6 -m venv venv
 source venv/bin/activate
 pip install -r requirements.txt
 
+# rename sample_custom/ to custom/
+mv assistant/sample_custom/ assistant/custom/
+
 echo "*** Installation complete ***"
